<resources>
    <string name="app_name">Nebula Gaming</string>
    <string name="sign_up">Sign up</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="Name">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="continue_with">Continue with</string>
    <string name="pfp">pfp</string>
    <string name="cntdesc">cntDesc</string>
    <string name="events">Events</string>
    <string name="articles">Articles</string>
    <string name="forum">Forum</string>
    <string name="job_offers">Job Offers</string>
    <string name="marketplace">Marketplace</string>
    <string name="nav_open">Open</string>
    <string name="about">About</string>
    <string name="nav_close">Close</string>
    <string name="username">Username</string>
    <string name="level">LEVEL</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="notifimage">notifImage</string>
    <string name="hot_now">Hot Now!</string>
    <string name="check_out_what_s_hot_now">Check out what\'s hot now !</string>
    <string name="cool">Cool !</string>
    <string name="we_re_hiring">WE\'RE HIRING!</string>
    <string name="dot">•</string>
    <string name="chat">Chat</string>
    <string name="your_message">Your message…</string>
    <string name="bubble_header">
        %1$s • %2$s
    </string>
    <string name="select_your_role_please">Select your role please</string>
    <string name="submit">Submit</string>
    <string name="slogant">Best Tunisian Gaming Platform</string>
    <string name="made_with_love_by">Made with Love By</string>
    <string name="tap_to_contact_us">Tap to contact us!</string>
    <string name="dev1">Aymen Dhahri</string>
    <string name="dev2">Med Yassine Messaoud</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">GitHub</string>
    <string name="fb_yassine">https://www.facebook.com/yassine.mess.12</string>
    <string name="lin_yassine">https://www.linkedin.com/in/mdyassinemess/</string>
    <string name="gh_aymen">https://www.github.com/DroidZed</string>
    <string name="gh_yassine">https://www.github.com/yassineMessaoud9</string>
    <string name="lin_aymen">https://www.linkedin.com/in/aymen-d/</string>
    <string name="facebook">Facebook</string>
    <string name="ng_email">nebula.gaming2@outlook.com</string>
    <string name="code_count_down">3:00</string>
    <string name="verify_and_continue"><![CDATA[Verify & Continue]]></string>
    <string name="resend_code">Resend Code?</string>
    <string name="enter_code">Enter code</string>
    <string name="verify_account">Verify account</string>
    <string name="timer_text">%1$d:%2$d</string>
    <string name="enter_the_4_digit_code_we_sent_to_your_email_address_to_verify_your_new_nebula_gaming_account">Enter the 4-digit code we sent to your email address to verify your new Nebula Gaming account:</string>
    <string name="add_job_post">Publish Job Ad</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_your_email_to_reset_your_password">Enter your email to reset your password</string>
    <string name="enter_your_4_digit_code_to_modify_your_password">Enter your 4 digit code to modify your password</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="your_products">Your products</string>
    <string name="job_title">Job Title</string>
    <string name="job_description_offre">Job Description</string>
    <string name="job_adress">Job Address</string>

    <string-array name="offrejobType">
        <item>Stage PFE</item>
        <item>Stage Initiation</item>
        <item>Emploi CDI</item>
        <item>Emploi CDD</item>
        <item>Alternance</item>
        <item>Freelance</item>
    </string-array>
    <string name="overflow_btn_ctn_desc">Overflow button</string>
    <string name="your_name">Your name</string>
    <string name="lvl_10">lvl 10</string>
    <string name="rank">Rank</string>
    <string name="rewards">Rewards</string>
    <string name="update_info">Update info</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_cart">My Cart</string>
    <string name="search">Search…</string>
    <string name="view">View</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</string>
    <string name="your_comment">Your comment</string>
    <string name="posts">Posts</string>
    <string name="no_internet_img">no internet img</string>
    <string name="no_internet">No internet!!</string>
    <string name="conversations">Conversations</string>
    <string name="article">Article Details</string>
    <string name="check_it_out">Check it out</string>
    <string name="tags">tags:</string>
    <string name="read_more">Read more</string>
    <string name="levelU">Level - %1$d</string>
    <string name="job_position">Job Position</string>
    <string name="link_to_apply_for_the_job">Link to apply for the job</string>
    <string name="quiz">Quiz</string>
    <string name="nothing_to_see_here">Nothing to see here…</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="disable">Disable</string>
    <string name="created_at">Created At:</string>
    <string name="status">Status:</string>
    <string name="remaining_tries">Remaining tries: %1$d</string>
    <string name="products">Products</string>
    <string name="product">Product Details</string>
    <string name="contact_buyer">Contact buyer</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="prod_price">%1$.2f DT</string>
    <string name="call_buyer">Call buyer</string>
    <string name="email_buyer">Email buyer</string>
    <string name="list_users">List Users</string>
</resources>