<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/postFragment"
        android:icon="@drawable/ic_baseline_control_point_24"
        android:title="@string/add_job_post"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_baseline_notifications"
        android:title="@string/notifications"
        app:showAsAction="always" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/name"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>