<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/rankFragment"
        android:icon="@drawable/name"
        android:title="@string/profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/bookmarksFragment"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:title="@string/bookmarks"
        app:showAsAction="always" />

    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/ic_baseline_checklist"
        android:title="@string/wishlist"
        app:showAsAction="always" />

    <item
        android:id="@+id/postsFragment"
        android:icon="@drawable/ic_baseline_forum_24"
        android:title="Posts"
        app:showAsAction="always" />
</menu>