<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    tools:context=".ForgetPasswordActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="147dp"
        android:layout_height="132dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logonv" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="333dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="364dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/enter_your_email_to_reset_your_password"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailforgtpasslayout"
        android:layout_width="379dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="17dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView45">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codeInputEditTextforgtpass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonverifValidfrgtpass"
        android:layout_width="266dp"
        android:layout_height="48dp"

        android:layout_marginTop="44dp"
        android:backgroundTint="#3C1E5C"
        android:text="@string/verify_and_continue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailforgtpasslayout"
        app:layout_constraintVertical_bias="0.036"
        app:startIconDrawable="@drawable/ic_fbicone" />


</androidx.constraintlayout.widget.ConstraintLayout>