<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    tools:context=".ActivateAccountActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="147dp"
        android:layout_height="132dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logonv" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="226dp"
        android:layout_height="73dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/verify_account"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="377dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter_the_4_digit_code_we_sent_to_your_email_address_to_verify_your_new_nebula_gaming_account"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codeInputLayout"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codeInputEditText"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/timeercountdown"
        android:layout_width="107dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="92dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/codeInputLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/buttonverifValid"
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:layout_marginBottom="164dp"
        android:backgroundTint="#3C1E5C"

        android:text="@string/verify_and_continue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_fbicone"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/renvoyerCode"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/resend_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534" />

</androidx.constraintlayout.widget.ConstraintLayout>
