<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shiny_wallpaper"
    android:backgroundTint="@color/darkyGray"
    android:backgroundTintMode="multiply"
    tools:context=".fragments.AboutFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/cntdesc"
        android:src="@drawable/logonv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/merriweather_black_italic"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/merriweather_black_italic"
        android:text="@string/slogant"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/pacifico"
            android:text="@string/made_with_love_by"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@id/tvText"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/tvText"
            android:background="@color/white" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/silverImg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/cntdesc"
        android:src="@drawable/silver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout5" />

    <TextView
        android:id="@+id/dev1N"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_black_italic"
        android:text="@string/dev1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/silverImg"
        app:layout_constraintTop_toTopOf="@+id/silverImg" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/silverImg"
        app:layout_constraintTop_toBottomOf="@id/dev1N">

        <com.google.android.material.chip.Chip
            android:id="@+id/dev1ChipGH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github"
            app:chipIcon="@drawable/github_mark_light_32px" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dev1ChipLI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkedin"
            app:chipIcon="@drawable/li_in_bug" />

    </com.google.android.material.chip.ChipGroup>

    <ImageView
        android:id="@+id/goldenImg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/cntdesc"
        android:src="@drawable/gold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/silverImg" />

    <TextView
        android:id="@+id/dev2N"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_black_italic"
        android:text="@string/dev2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goldenImg"
        app:layout_constraintTop_toTopOf="@+id/goldenImg" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/dev2ChipGrp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:chipSpacingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goldenImg"
        app:layout_constraintTop_toBottomOf="@id/dev2N"
        app:singleLine="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/dev2ChipGH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github"
            app:chipIcon="@drawable/github_mark_light_32px" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dev2ChipLI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkedin"
            app:chipIcon="@drawable/li_in_bug" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dev2ChipFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            app:chipIcon="@drawable/facebook_logo" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/contactBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_contact_us"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dev2ChipGrp" />


</androidx.constraintlayout.widget.ConstraintLayout>